# AllSeaingVehicle

./: .gitignore  .gitmodules  README.md  install_geographiclib_datasets.sh  mav.parm  mav.tlog  mav_0_1.parm  oyster.rviz  requirements.md  requirements.txt  send_bluetooth.py  sim.rviz  subset-mavros-global_position-global.csv  test_bluetooth.py  vid_to_bag.sh
.cache/clangd/index/: BoundingBox2Df.h.DCCBB17522FAC17A.idx  BoundingBox2Di.h.3C4332D3B41797C5.idx  BoundingBox3D.h.4FEE6E72099926FE.idx  Keypoint2Df.h.5807D3329A601E05.idx  Keypoint2Di.h.0DA38CB2B536FC90.idx  Keypoint3D.h.D9F678A915B0A10F.idx  Object.h.FF0FD33C0D3DD1AF.idx  ObjectsStamped.h.DEB3CD33B9792A56.idx  Skeleton2D.h.76577E20343BBFEB.idx  Skeleton3D.h.C5D57C73A0589E27.idx  rgbd_test_sync.cpp.87FFFD19E2564EFC.idx  rgbd_test_sync.hpp.41325CD20B318953.idx  zed_depth_sub_tutorial.cpp.BF8DB007093C3CF2.idx  zed_obj_det_sub_tutorial.cpp.6669628AE4C63F96.idx  zed_od_display.cpp.3E817B3AAFFBF871.idx  zed_od_display.hpp.A5ABD8395875A2C3.idx  zed_od_info.cpp.D083BE22FA40F957.idx  zed_od_info.hpp.AE520A80A4F95DFE.idx  zed_sensors_sub_tutorial.cpp.7503DACF10C32C9C.idx  zed_tracking_sub_tutorial.cpp.30721B3A1A8AC340.idx  zed_video_sub_tutorial.cpp.3887813045F35CD5.idx
.catkin_tools/profiles/default/: devel_collisions.txt
arduino/: README.md  arduino.launch  waterpump_test.ino
arduino/ArduinoNode/: ArduinoNode.ino
arduino/KillSwitch/: KillSwitch.ino
arduino/ball_collector_test/: ball_collector_test.ino
arduino/ball_shooter_full_test/: ball_shooter_full_test.ino
arduino/ball_shooter_rotation_test/: ball_shooter_rotation_test.ino
arduino/ball_shooter_water_gun/: CommandLine.h  ball_shooter_water_gun.ino
arduino/deploy/ship_happens_2023/: ship_happens_2023.ino
arduino/ibt2_test/: ibt2_test.ino
arduino/led_tower/: led_tower.ino
arduino/rosified_full/: rosified_full.ino
arduino/sample read imu code/: drive8.py  pathPlanner.cpp
bagfiles/: description.txt
config/: mav.parm  mav.tlog.raw  mav_0_1.parm  sim.rviz
controller/: pid.py  pidsim.py  readvels.py
notebooks/: detection.ipynb
src/: .rosinstall  .rosinstall.bak
src/arcturus_pilot/: CMakeLists.txt  package.xml  waypoint_pilot.py
src/arcturus_pilot/launch/: apm.launch  apm_config.yaml  global_costmap_params.yaml  global_planner.launch  map_server.launch  mavros.launch  planner.launch  simulator.launch
src/arcturus_pilot/maps/: README.md  willow-2010-02-18-0.10.yaml
src/arcturus_pilot/msg/: BuoyList.msg  Object.msg  ProcessedWaypoint.msg  RawWaypoint.msg  SkipWaypoint.msg  VelocityCommand.msg  Waypoint.msg
src/controller_suite/: CMakeLists.txt  package.xml
src/mapping_suite/: CMakeLists.txt  package.xml
src/navigation/pilot_suite/: CMakeLists.txt  setup.py
src/navigation/pilot_suite/launch/: apm_config.yaml  simulator.launch
src/navigation/pilot_suite/msg/: RawWaypoint.msg
src/navigation/pilot_suite/scripts/: .mode_listener.py.swp  loiter_mode.py
src/navigation/pilot_suite/scripts/testing/: avoid_crowd_occupancy.py
src/navigation/pilot_suite/src/: buoy_nav.py  pwm_sender.py  tf2.py
src/navigation/pilot_suite/src/testing/: test_pca.py
src/navigation/pilot_suite/srv/: PwmCommand.srv
src/perception/perception_suite/: CMakeLists.txt  setup.py
src/perception/perception_suite/launch/: ar_zed.launch  perception.launch
src/perception/perception_suite/model/old/: last.pt:Zone.Identifier
src/perception/perception_suite/msg/: LabeledBoundingBox2D.msg  LabeledBoundingBox2DArray.msg  Object.msg  ObjectArray.msg
src/perception/perception_suite/scripts/: bbox_filter.py  buoy_detector.py  buoy_segmentation.py  visual_servoing.py  yolov5_detector.py  yolov5_image.py
src/perception/perception_suite/src/: bbox_filter.py  buoy_boat_detector.py  buoy_detector.py  yolov5_detector.py  yolov5_image.py  zed_velocity_publisher.cpp
src/perception/perception_suite/src/perception_suite/: utils.py
src/perception_suite/: CMakeLists.txt  best.pt:Zone.Identifier  package.xml  segmentation.py  yolov5_detector.py
src/pilot_suite/: CMakeLists.txt  README.md  package.xml  setup.py
src/pilot_suite/launch/: apm.launch  apm_config.yaml  autonomy.launch  boat.launch  mavros.launch  planner.launch
src/pilot_suite/msg/: ProcessedTask.msg  ProcessedWaypoint.msg  RawWaypoint.msg  SkipWaypoint.msg  VelocityCommand.msg
src/pilot_suite/scripts/: .water_gun_task.py.swp  2  3  \  ardupilot.py  ball_launch.py  local_planner.py  mode_listener.py  navigation_pilot.py  object_types.py  ocean_cleanup_nav.py  open_loop_distance.py  oyster_task.py  pilot_shifter.py  roboboat_planner.py  skeeball_task.py  straight_nav.py  task_node.py  turtle_nest.py  velocity_control.py  water_gun_task.py  waypoint_sim.py
src/pilot_suite/scripts/testing/: avoid_crowd_occupancy.py  avoid_crowd_waypoints.py  broadcast_map_transform.py  path_helper.py  snack_run_helper.py  snack_run_occupancy.py  snack_run_waypoints.py
src/pilot_suite/src/pilot_suite/: geom_utils.py  task_node.py
src/pilot_suite/src/pilot_suite/object_types/: roboboat.py
src/pilot_suite/srv/: GoToWaypoint.srv
src/sensor_suite/: CMakeLists.txt  fake_camera.py  package.xml  zed_node_new.pyZone.Identifier
src/simple_mapping_suite/: CMakeLists.txt  package.xml
src/tasks/njord_2023/: CMakeLists.txt
src/tasks/njord_2023/launch/: boat.launch  boat_no_zed.launch  task_1_1_3.launch  task_1_2.launch  task_3_1.launch  task_3_2.launch
src/tasks/njord_2023/src/: action_planner.py  buoy_detector_v1.py  buoy_detector_v2.py  loop.py  maneuver.py  otonomus.py  otonomus_turn.py  thruster_controller_v1.py  thruster_controller_v2.py
src/tasks/roboboat_2023/: CMakeLists.txt  package.xml
src/tasks/roboboat_2023/launch/: arduino.launch
src/tasks/roboboat_2023/src/: water_gun_task.py
src/utility/: CMakeLists.txt  package.xml  setup.py
src/velodyne_gazebo_plugins/: CMakeLists.txt
src/vrx/tools/: cpplint.py  (+1 more)
src/wamv_description/: CHANGELOG.rst
src/wamv_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/water_gun_task/: CMakeLists.txt  package.xml
src/wave_gazebo/: CMakeLists.txt
(+372 files in other folders)
